[gd_scene load_steps=11 format=3 uid="uid://c8i2fca2b03vg"]

[ext_resource type="Script" path="res://player/weapons/melee/melee.gd" id="1_w3cvk"]
[ext_resource type="Script" path="res://player/weapons/melee/melee_swivel.gd" id="2_8kw0m"]
[ext_resource type="Script" path="res://player/weapons/melee/melee_weapon.gd" id="3_5ixea"]
[ext_resource type="Texture2D" uid="uid://cikcypx4bhv8c" path="res://player/weapons/melee/metal_baseball_bat/metal_baseball_bat.png" id="4_e0nyu"]
[ext_resource type="Shader" path="res://player/weapons/melee/melee_weapon.gdshader" id="5_pejef"]
[ext_resource type="Script" path="res://player/weapons/melee/melee_damage_calculation.gd" id="6_qy1uw"]
[ext_resource type="Script" path="res://player/weapons/gun/crosshair.gd" id="7_x5ga8"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_s2auw"]
shader = ExtResource("5_pejef")
shader_parameter/cone_angle = 2.0
shader_parameter/transparency = 1.0
shader_parameter/speed = 1.0
shader_parameter/flash = false

[sub_resource type="Gradient" id="Gradient_57hvr"]
resource_local_to_scene = true
offsets = PackedFloat32Array(0, 0.377432)
colors = PackedColorArray(0.2024, 0.383878, 1, 1, 0.257054, 0.183652, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_od5xt"]
gradient = SubResource("Gradient_57hvr")
fill_from = Vector2(1, 0)
fill_to = Vector2(0, 0)

[node name="Melee" type="Node2D"]
script = ExtResource("1_w3cvk")

[node name="MeleeSwivel" type="Node2D" parent="."]
script = ExtResource("2_8kw0m")

[node name="MeleeWeapon" type="Node2D" parent="MeleeSwivel"]
script = ExtResource("3_5ixea")

[node name="MeleeSprite" type="Sprite2D" parent="MeleeSwivel/MeleeWeapon"]
z_index = 1
rotation = 0.418879
texture = ExtResource("4_e0nyu")

[node name="AttackTimer" type="Timer" parent="MeleeSwivel/MeleeWeapon"]
one_shot = true

[node name="MultistrikeTimer" type="Timer" parent="MeleeSwivel/MeleeWeapon"]

[node name="MeleeStrikeRange" type="Area2D" parent="MeleeSwivel/MeleeWeapon"]
collision_layer = 2
collision_mask = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="MeleeSwivel/MeleeWeapon/MeleeStrikeRange"]
polygon = PackedVector2Array(85, 0, 85, -40, 42, -22, 0, 0, 42, 22, 85, 40)

[node name="AttackCone" type="Sprite2D" parent="MeleeSwivel/MeleeWeapon/MeleeStrikeRange"]
texture_repeat = 2
material = SubResource("ShaderMaterial_s2auw")
scale = Vector2(2.7, 2.7)
texture = SubResource("GradientTexture2D_od5xt")

[node name="MeleeDamageCalculation" type="Node" parent="."]
script = ExtResource("6_qy1uw")

[node name="Crosshair" type="Sprite2D" parent="."]
visible = false
z_index = 1
script = ExtResource("7_x5ga8")
